# osolar-rag

./: .dockerignore  .embedding_cache.json  Dockerfile  README.md  READ_ME.txt  app.py  config.py  pyproject.toml  requirements.txt
api/: __init__.py  routes.py
chroma_persist/: chroma.sqlite3
data/: FAQs.txt  users.json
faiss_persist/: index.faiss  index.pkl
loaders/: faq_loader.py  json_loader.py  pdf_loader.py
scripts/: ingest.py
services/: backend_client.py  bedrock_llm.py  llm_client.py  qa_chain.py
